[package]
name = "foodtech-quiz"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.12"
bincode = "1.2"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
hex = "0.4"
rand = "0.7"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
warp = { version = "0.2", features = ["compression"] }
